--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "highcharts": "^10.3.1",
+    "highcharts-react-official": "^3.1.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
