--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -20,8 +21,9 @@
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "eslint": "8.26.0",
+    "eslint": "8.22.0",
     "eslint-config-next": "13.0.0",
+    "prettier": "3.0.1",
     "typescript": "4.8.4"
   }
 }
