--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"./src/**/*.{ts,tsx}\""
+    "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "test": "jest --env=jsdom --verbose"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -18,12 +19,31 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "babel-jest": "^29.6.2",
     "eslint": "8.22.0",
     "eslint-config-next": "13.0.0",
+    "jest": "^29.6.2",
+    "jest-css-modules": "^2.1.0",
+    "jest-environment-jsdom": "^29.6.2",
     "prettier": "3.0.1",
     "typescript": "4.8.4"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/.next/",
+      "<rootDir>/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules"
+    },
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
